--- a/k8s_deploy.yaml
+++ b/k8s_deploy.yaml
@@ -271,3 +271,13 @@
           command: "{{ k8s_working_dir }}/AutoKube/kube-join.sh"
 
       when: kube_join_check.stat.exists == true
+
+
+- name: Set CNI
+  hosts: control
+  vars_files:
+    - k8s_vars.yaml
+    
+  tasks:
+    - name: Set Pods network
+      command: "kubectl apply -f {{ cni_url }}"
