--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = inventory
+inventory = inventory.json
 remote_user = ec2-user 
 priate-key-file = /home/ec2-user/test01-key.pem
 
