--- a/k8s_deploy.yaml
+++ b/k8s_deploy.yaml
@@ -168,9 +168,16 @@
         state: restarted
       loop: "{{ services }}"
     
-    - name: Create AutoKube repository
+    - name: Create AutoKube directory
       file:
         path: "{{ k8s_working_dir }}/AutoKube"
+        state: directory
+        owner: "{{ ansible_user }}"
+        group: "{{ ansible_user}}"
+
+    - name: Create .log directory
+      file:
+        path: "{{ k8s_working_dir }}/AutoKube/.log"
         state: directory
         owner: "{{ ansible_user }}"
         group: "{{ ansible_user}}"
@@ -201,7 +208,7 @@
     - name: Kubeadm block
       block:
         - name: Initialize cluster & create join script
-          shell: "{ echo {{ bin_bash | quote }}; sudo kubeadm init --apiserver-cert-extra-sans {{ lb_address_pub }} --control-plane-endpoint {{ control_plane_end_point }} --upload-certs | tee .log/kubectl.log | grep -e {{ search.one | quote }} -e {{ search.two }} -e {{ search.three }} | head -n 3; } > {{ k8s_working_dir }}/AutoKube/kube-join.sh"
+          shell: "{ echo {{ bin_bash | quote }}; sudo kubeadm init --apiserver-cert-extra-sans {{ lb_address_pub }} --control-plane-endpoint {{ control_plane_end_point }} --upload-certs | tee {{ k8s_working_dir }}/AutoKube/.log/kubectl.log | grep -e {{ search.one | quote }} -e {{ search.two }} -e {{ search.three }} | head -n 3; } > {{ k8s_working_dir }}/AutoKube/kube-join.sh"
           register: kubeadm_check
 
       rescue:
@@ -250,6 +257,12 @@
 
         - name: Join cluster
           command: "{{ k8s_working_dir }}/AutoKube/kube-join.sh"
+          register: master_join_output
+
+        - name: Store Join output
+          copy: 
+            content: "{{ master_join_output.[inventory_host_name].stdout }}"
+            dest: "{{ k8s_working_dir }}/AutoKube/.log/kubeadm.log"
 
       when: kube_join_check.stat.exists == true
 
@@ -285,6 +298,12 @@
 
         - name: Join cluster
           command: "{{ k8s_working_dir }}/AutoKube/kube-join.sh"
+          register: worker_join_output
+
+        - name: Store Join output
+          copy: 
+            content: "{{ worker_join_output.[inventory_host_name].stdout }}"
+            dest: "{{ k8s_working_dir }}/AutoKube/.log/kubeadm.log"
 
       when: kube_join_check.stat.exists == true
 
