--- a/k8s_deploy.yaml
+++ b/k8s_deploy.yaml
@@ -367,7 +367,7 @@
     - name: Create admin-user
       command: "kubectl apply -f {{ k8s_working_dir }}/AutoKube/.kubernetes/ServiceAccount.yaml
 
-    - name: Create admin-user
+    - name: Bind admin-user to Role
       command: "kubectl apply -f {{ k8s_working_dir }}/AutoKube/.kubernetes/ClusterRoleBinding.yaml
 
     - name: Set Kubernetes Dashboard
