--- a/k8s_deploy.yaml
+++ b/k8s_deploy.yaml
@@ -15,9 +15,16 @@
         owner: "{{ ansible_user }}"
         group: "{{ ansible_user }}"
 
-    - name: Create AutoKube temporary directory
+    - name: Create KAP shared directory
       file:
-        path: "/tmp/AutoKube"
+        path: "{{ k8s_working_dir }}/.kap"
+        state: directory
+        owner: "{{ ansible_user }}"
+        group: "{{ ansible_user }}"
+
+    - name: Create KAP temporary directory
+      file:
+        path: "/tmp/kap"
         state: directory
         owner: "{{ ansible_user }}"
         group: "{{ ansible_user }}"
@@ -199,16 +206,16 @@
         state: restarted
       loop: "{{ services }}"
     
-    - name: Create AutoKube directory
+    - name: Create KAP directory
       file:
-        path: "{{ k8s_working_dir }}/AutoKube"
+        path: "{{ k8s_working_dir }}/kap"
         state: directory
         owner: "{{ ansible_user }}"
         group: "{{ ansible_user}}"
 
     - name: Create .log directory
       file:
-        path: "{{ k8s_working_dir }}/AutoKube/.log"
+        path: "{{ k8s_working_dir }}/kap/.log"
         state: directory
         owner: "{{ ansible_user }}"
         group: "{{ ansible_user}}"
@@ -226,7 +233,7 @@
   tasks:
     - name: Check if kube-join.sh file already exists.
       stat:
-        path: "/tmp/AutoKube/kube-join.sh"
+        path: "{{ k8s_working_dir }}/kap/kube-join.sh"
       register: kube_join_check
     
     - name: Check if kubelet is running.
@@ -242,7 +249,7 @@
     - name: Kubeadm block
       block:
         - name: Initialize cluster & create join script
-          shell: "{ echo {{ bin_bash | quote }}; sudo kubeadm init --pod-network-cidr=10.244.0.0/16 --apiserver-cert-extra-sans {{ lb_address_pub }} --control-plane-endpoint {{ control_plane_end_point }} --upload-certs 2>&1 | tee {{ k8s_working_dir }}/AutoKube/.log/kubeadm.log | grep -e {{ search.one | quote }} -e {{ search.two }} -e {{ search.three }} | head -n 3; } > {{ k8s_working_dir }}/AutoKube/kube-join.sh"
+          shell: "{ echo {{ bin_bash | quote }}; sudo kubeadm init --pod-network-cidr=10.244.0.0/16 --apiserver-cert-extra-sans {{ lb_address_pub }} --control-plane-endpoint {{ control_plane_end_point }} --upload-certs 2>&1 | tee {{ k8s_working_dir }}/kap/.log/kubeadm.log | grep -e {{ search.one | quote }} -e {{ search.two }} -e {{ search.three }} | head -n 3; } > {{ k8s_working_dir }}/kap/kube-join.sh"
           register: kubeadm_check
 
         - name: Copy admin.conf file to administrator
@@ -251,10 +258,10 @@
             dest: "{{ k8s_working_dir }}/.kube/config"
             flat: true
         
-        - name: Copy kube-join.sh file to administrator
+        - name: Copy kube-join.sh file to shared directory
           fetch:
-            src: "{{ k8s_working_dir }}/AutoKube/kube-join.sh"
-            dest: "/tmp/AutoKube/"
+            src: "{{ k8s_working_dir }}/kap/kube-join.sh"
+            dest: "{{ k8s_working_dir }}/.kap/"
             flat: true
             
       when: kube_join_check.stat.exists == false and ansible_facts.services["kubelet.service"].state == "stopped"
@@ -270,7 +277,7 @@
   tasks:
     - name: Check if kube-join.sh file already exists.
       stat:
-        path: "/tmp/AutoKube/kube-join.sh"
+        path: "{{ k8s_working_dir }}/kap/kube-join.sh"
       register: kube_join_check
     
     - name: Check if kubelet is running.
@@ -278,22 +285,22 @@
 
     - name: Execution block
       block:
-        - name: Check if kube-join.sh file already exists.
+        - name: Check if kube-join.sh exists in shared directory
           stat:
-            path: "/tmp/AutoKube/kube-join.sh"
+            path: "{{ k8s_working_dir }}/.kap/kube-join.sh"
           delegate_to: localhost
           register: kube_join_adm_check
 
         - name: Join Cluster.
           block:
-            - name: Copy kube-join.sh on worker nodes.
+            - name: Copy kube-join.sh on master nodes
               copy:
-                src: "/tmp/AutoKube/kube-join.sh"
-                dest: "{{ k8s_working_dir }}/AutoKube/"
+                src: "{{ k8s_working_dir }}/.kap/kube-join.sh"
+                dest: "{{ k8s_working_dir }}/kap/"
                 mode: 0700
 
             - name: Join cluster
-              command: "{{ k8s_working_dir }}/AutoKube/kube-join.sh >> {{ k8s_working_dir }}/AutoKube/.log/kubeadm.log 2>&1"
+              command: "{{ k8s_working_dir }}/kap/kube-join.sh >> {{ k8s_working_dir }}/kap/.log/kubeadm.log 2>&1"
 
           when: kube_join_adm_check.stat.exists == true
 
@@ -310,7 +317,7 @@
   tasks:
     - name: Check if kube-join.sh file already exists.
       stat:
-        path: "/tmp/AutoKube/kube-join.sh"
+        path: "{{ k8s_working_dir }}/kap/kube-join.sh"
       register: kube_join_check
     
     - name: Check if kubelet is running.
@@ -318,9 +325,9 @@
     
     - name: Execution block
       block:
-        - name: Check if kube-join.sh file already exists.
+        - name: Check if kube-join.sh file exists in shared directory.
           stat:
-            path: "/tmp/AutoKube/kube-join.sh"
+            path: "{{ k8s_working_dir }}/.kap/kube-join.sh"
           delegate_to: localhost
           register: kube_join_adm_check
 
@@ -328,18 +335,18 @@
           block:
             - name: Copy kube-join.sh on worker nodes.
               copy:
-                src: "/tmp/AutoKube/kube-join.sh"
-                dest: "{{ k8s_working_dir }}/AutoKube/"
+                src: "{{ k8s_working_dir }}/.kap/kube-join.sh"
+                dest: "{{ k8s_working_dir }}/kap/"
                 mode: 0700
 
             - name: Remove Control plane line in file
               lineinfile:
-                path: "{{ k8s_working_dir }}/AutoKube/kube-join.sh"
+                path: "{{ k8s_working_dir }}/kap/kube-join.sh"
                 search_string: "control-plane"
                 state: absent
 
             - name: Join cluster
-              command: "{{ k8s_working_dir }}/AutoKube/kube-join.sh >> {{ k8s_working_dir }}/AutoKube/.log/kubeadm.log 2>&1"
+              command: "{{ k8s_working_dir }}/kap/kube-join.sh >> {{ k8s_working_dir }}/kap/.log/kubeadm.log 2>&1"
           
           when: kube_join_adm_check.stat.exists == true
 
@@ -356,12 +363,12 @@
     - name: Copy kubeconfig to temporary directory
       copy:
         src: "{{ k8s_working_dir }}/.kube/config"
-        dest: "/tmp/AutoKube/kubeconfig"
+        dest: "/tmp/kap/kubeconfig"
         remote_src: True
 
     - name: Set cluster access point to public DNS
       lineinfile:
-        path: "/tmp/AutoKube/kubeconfig"
+        path: "/tmp/kap/kubeconfig"
         search_string: "server"
         line: "    server: https://{{ lb_address_pub }}:6443"
 
@@ -388,12 +395,12 @@
       block:
         - name: Create admin-user
           k8s:                                                                                                                                                                                                             
-            src: "{{ k8s_working_dir }}/AutoKube/.kubernetes/ServiceAccount.yaml"
+            src: "{{ k8s_working_dir }}/kap/.kubernetes/ServiceAccount.yaml"
             apply: True
       
         - name: Bind admin-user to Role
           k8s:                                                                                                                                                                                                             
-            src: "{{ k8s_working_dir }}/AutoKube/.kubernetes/ClusterRoleBinding.yaml"
+            src: "{{ k8s_working_dir }}/kap/.kubernetes/ClusterRoleBinding.yaml"
             apply: True
 
     - name: Velero
